--- a/ThousandOrigamiCranes/app/src/main/res/layout/list_view_date.xml
+++ b/ThousandOrigamiCranes/app/src/main/res/layout/list_view_date.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/list_show_memo">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/text_date"
@@ -13,16 +12,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginBottom="5dp"
         android:background="@drawable/date_border"
-
         android:text="2018 08 21 화"
         android:textColor="@color/colorWhite" />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/text_memo"
-        android:text="testsaetset"
-        android:background="@drawable/border"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"/>
 </LinearLayout>
